Alot of bugs, changes and new functions.